--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,7 +5,13 @@ bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft=
 # 0 is too far from ` ;)
 set -g base-index 1
 set-window-option -g pane-base-index 1
+
+# general setting
 set -g default-terminal "screen-256color"
+setw -g xterm-keys on
+set -s escape-time 10                     # faster command sequences
+set -sg repeat-time 600                   # increase repeat timeout
+set -s focus-events on
 
 # Clear the pane and it's history
 bind -n C-k send-keys C-l \; clear-history
@@ -16,7 +22,7 @@ set-option -g set-titles on
 
 #set -g default-terminal screen-256color
 set -g status-keys vi
-set -g history-limit 10000
+set -g history-limit 5000
 
 setw -g mode-keys vi
 setw -g monitor-activity on
@@ -56,9 +62,6 @@ bind -n M-Down select-pane -D
 bind -n S-Left  previous-window
 bind -n S-Right next-window
 
-# No delay for escape key press
-set -sg escape-time 0
-
 # Reload tmux config
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded.."
 
@@ -86,11 +89,16 @@ set -g status-interval 60
 # invoke reattach-to-user-namespace every time a new window/pane opens
 set-option -g default-command "reattach-to-user-namespace -l zsh"
 
+bind P paste-buffer
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-selection
+bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
+
 # start selecting text typing 'v' key (once you are in copy mode)
- #bind-key -t vi-copy v begin-selection
+# bind-key -t vi-copy v begin-selection
 # copy selected text to the system's clipboard
 # bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-#set-option -g default-command "reattach-to-user-namespace -l $SHELL"
+# set-option -g default-command "reattach-to-user-namespace -l $SHELL"
 
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
@@ -104,8 +112,10 @@ set-option -g default-command "reattach-to-user-namespace -l zsh"
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'tmux-plugins/tmux-open'
 
 run '~/.tmux/plugins/tpm/tpm'
 
