--- a/.tmux.conf
+++ b/.tmux.conf
@@ -27,8 +27,8 @@ set -g history-limit 5000
 setw -g mode-keys vi
 setw -g monitor-activity on
 
-# bind-key v split-window -h
-# bind-key s split-window -v
+bind-key v split-window -h
+bind-key V split-window -v
 
 bind-key J resize-pane -D 5
 bind-key K resize-pane -U 5
