--- a/.tmux.conf
+++ b/.tmux.conf
@@ -77,17 +77,17 @@ bind r source-file ~/.tmux.conf \; display-message "Config reloaded.."
 # set -g status-right '#[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #[fg=white]%H:%M#[default]'
 
 set -g status-justify centre
-set -g status-right-attr bright
+# set -g status-right-attr bright
 set -g status-right "%H:%M %a %m-%d"
 set -g status-bg default
 set -g status-fg '#afd787'
-setw -g window-status-current-attr bright
-setw -g window-status-current-fg black
-setw -g window-status-current-bg '#afd787'
+# setw -g window-status-current-attr bright
+# setw -g window-status-current-fg black
+# setw -g window-status-current-bg '#afd787'
 set -g status-interval 60
 
 # invoke reattach-to-user-namespace every time a new window/pane opens
-set-option -g default-command "reattach-to-user-namespace -l zsh"
+# set-option -g default-command "reattach-to-user-namespace -l zsh"
 
 bind P paste-buffer
 bind-key -T copy-mode-vi v send-keys -X begin-selection
@@ -108,7 +108,6 @@ bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
 bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
 bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
 bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
-bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
